--- a/libhub/7.3.0/aspnet-core/src/LibHub.Web.Host/appsettings.json
+++ b/libhub/7.3.0/aspnet-core/src/LibHub.Web.Host/appsettings.json
@@ -24,5 +24,13 @@
   },
   "Swagger": {
     "ShowSummaries": false
+  },
+  "RabbitMQ": {
+    "Connections": {
+      "Default": {
+        "HostName": "123.123.123.123",
+        "Port": "5672"
+      }
+    }
   }
 }
