--- a/libhub/7.3.0/aspnet-core/src/LibHub.EntityFrameworkCore/LibHub.EntityFrameworkCore.csproj
+++ b/libhub/7.3.0/aspnet-core/src/LibHub.EntityFrameworkCore/LibHub.EntityFrameworkCore.csproj
@@ -23,5 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="EntityFrameworkCore\Migrations\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
