--- a/libhub/7.3.0/aspnet-core/src/LibHub.Web.Host/LibHub.Web.Host.csproj
+++ b/libhub/7.3.0/aspnet-core/src/LibHub.Web.Host/LibHub.Web.Host.csproj
@@ -37,10 +37,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Volo.Abp.BackgroundJobs.RabbitMQ" Version="8.0.5" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="wwwroot\swagger\ui\index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\Images\" />
   </ItemGroup>
 </Project>
