--- a/libhub/7.3.0/aspnet-core/src/LibHub.Web.Host/LibHub.Web.Host.csproj
+++ b/libhub/7.3.0/aspnet-core/src/LibHub.Web.Host/LibHub.Web.Host.csproj
@@ -33,18 +33,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="7.3.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.11" />
+    <PackageReference Include="Hangfire.Console" Version="1.4.3" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.8.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="8.0.5" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.RabbitMQ" Version="8.0.5" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="wwwroot\swagger\ui\index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\Images\" />
   </ItemGroup>
 </Project>
